vlib/v/checker/tests/json_decode_shared_err.out
vlib/v/checker/tests/json_decode_shared_err.vv:1:1: warning: module `json` has been deprecated; `json` will be removed soon; use the pure V `json2` module instead
    1 | import json
      | ~~~~~~~~~~~
    2 |
    3 | fn main() {
vlib/v/checker/tests/json_decode_shared_err.vv:6:16: error: json.encode cannot handle shared data
    4 |     shared data := [1, 2, 3]
    5 |     rlock data {
    6 |         println(json.encode(data))
      |                      ~~~~~~~~~~~~
    7 |     }
    8 | }
vlib/v/checker/tests/json_decode_shared_err.vv:6:3: error: `println` can not print void expressions
    4 |     shared data := [1, 2, 3]
    5 |     rlock data {
    6 |         println(json.encode(data))
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~
    7 |     }
    8 | }
